@@ -18,8 +18,9 @@ mbkmeans(x, ...)
 
 \S4method{mbkmeans}{LinearEmbeddingMatrix}(x, ...)
 
-\S4method{mbkmeans}{ANY}(x, clusters, batch_size = blocksize(x),
-  max_iters = 10, num_init = 1, init_fraction = 0.25,
+\S4method{mbkmeans}{ANY}(x, clusters, batch_size = ceiling(ncol(x) *
+  0.05), max_iters = 100, num_init = 1,
+  init_fraction = ifelse(ncol(x) > 1000, 0.25, 1),
   initializer = "kmeans++", calc_wcss = FALSE, early_stop_iter = 10,
   verbose = FALSE, CENTROIDS = NULL, tol = 1e-04)
 }
@@ -39,7 +40,8 @@ to mini-batch k-means. Set to NA to use the full matrix.}
 
 \item{clusters}{the number of clusters}
 
-\item{batch_size}{the size of the mini batches}
+\item{batch_size}{the size of the mini batches, by default 5 percent of
+observations.}
 
 \item{max_iters}{the maximum number of clustering iterations}
 
@@ -48,7 +50,8 @@ centroid seeds}
 
 \item{init_fraction}{percentage of data to use for the initialization
 centroids (applies if initializer is \emph{kmeans++} ). Should be a float
-number between 0.0 and 1.0.}
+number between 0.0 and 1.0. By default, it uses all the data if there are
+less than 1000 cells and 25 percent of the data otherwise.}
 
 \item{initializer}{the method of initialization. One of \emph{kmeans++} and
 \emph{random}. See details for more information}
