@@ -16,8 +16,8 @@ test_that("all mbkmeans methods give same result", {
     set.seed(1)
     m_m <- mbkmeans(assay(sce), clusters=3)
     set.seed(1)
-    mb <- mini_batch(t(assay(sce)), clusters=3, batch_size = blocksize(se),
-                     max_iters = 10, init_fraction = 0.25)
+    mb <- mini_batch(t(assay(sce)), clusters=3, batch_size = ceiling(ncol(sce)*0.05),
+                     max_iters = 100, init_fraction = 1)
 
     expect_equal(m_se, m_sce)
     expect_equal(m_se, m_m)
